refactor: update main content ID for consistency across files

--- a/course-time-tracker-main/index.html
+++ b/course-time-tracker-main/index.html
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Actual Content (hidden initially) -->
-    <div id="main-content" class="hidden">
+    <div id="main-content-wrapper" class="hidden">
       <!-- Dashboard -->
       <section class="grid gap-4 sm:gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-4">
         <!-- Today -->
@@ -654,9 +654,8 @@
           <span>Create First Section</span>
         </button>
       </section>
-      </section>
     </div>
-    <!-- End main-content -->
+    <!-- End main-content-wrapper -->
   </main>
 
   <!-- Modals -->
