--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
 
           <!-- Mobile: Course Selector -->
-          <div class="relative group min-w-0 flex-1 max-[479px]:block hidden">
+          <div class="relative group min-w-0 flex-1 block max-[479px]:block min-[480px]:hidden">
             <button id="course-selector-btn-mobile"
               aria-label="Select course"
               aria-haspopup="true"
@@ -92,7 +92,7 @@
           </div>
 
           <!-- Desktop: Course Selector -->
-          <div class="relative group hidden min-[480px]:block">
+          <div class="relative group block hidden max-[479px]:hidden min-[480px]:block">
             <button id="course-selector-btn"
               aria-label="Select course"
               aria-haspopup="true"
