--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
 
           <!-- Desktop: Course Selector -->
-          <div class="relative group block hidden max-[479px]:hidden min-[480px]:block">
+          <div class="relative group max-[479px]:hidden min-[480px]:block">
             <button id="course-selector-btn"
               aria-label="Select course"
               aria-haspopup="true"
