--- a/course-time-tracker-main/index.html
+++ b/course-time-tracker-main/index.html
@@ -58,8 +58,8 @@
               aria-label="Select course"
               aria-haspopup="true"
               aria-expanded="false"
-              class="flex items-center gap-1.5 w-full text-sm font-bold tracking-tight text-slate-800 dark:text-sky-400 hover:opacity-80 transition-opacity">
-              <span id="current-course-title-mobile" class="truncate flex-1 text-left">Course Tracker</span>
+              class="flex items-center gap-1.5 w-full min-w-0 text-sm font-bold tracking-tight text-slate-800 dark:text-sky-400 hover:opacity-80 transition-opacity">
+              <span id="current-course-title-mobile" class="truncate flex-1 text-left whitespace-nowrap overflow-hidden text-ellipsis block">Course Tracker</span>
               <svg class="w-4 h-4 text-slate-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
               </svg>
@@ -98,7 +98,7 @@
               aria-haspopup="true"
               aria-expanded="false"
               class="flex items-center gap-2 text-lg md:text-xl font-bold tracking-tight text-slate-800 dark:text-sky-400 hover:opacity-80 transition-opacity">
-              <span id="current-course-title" class="truncate">Course Time Tracker</span>
+              <span id="current-course-title" class="truncate whitespace-nowrap overflow-hidden text-ellipsis">Course Time Tracker</span>
               <svg class="w-5 h-5 text-slate-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
               </svg>
