refactor: fix class attribute formatting for course title elements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               aria-haspopup="true"
               aria-expanded="false"
               class="flex items-center gap-1.5 text-sm font-bold tracking-tight dark:text-sky-400 hover:opacity-80 transition-opacity truncate max-w-full">
-              <span id="current-course-title-mobile text-left" class="truncate">Course Tracker</span>
+              <span id="current-course-title-mobile" class="text-left truncate">Course Tracker</span>
               <svg class="w-4 h-4 text-slate-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
               </svg>
@@ -98,7 +98,7 @@
               aria-haspopup="true"
               aria-expanded="false"
               class="flex items-center gap-2 text-lg md:text-xl font-bold tracking-tight dark:text-sky-400 hover:opacity-80 transition-opacity">
-              <span id="current-course-title text-left">Course Time Tracker</span>
+              <span id="current-course-title" class="text-left">Course Time Tracker</span>
               <svg class="w-5 h-5 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
               </svg>
