--- a/index.html
+++ b/index.html
@@ -291,12 +291,34 @@
             </div>
 
             <!-- Daily Goals Progress -->
-            <div class="mt-4 w-full space-y-2">
+            <div class="mt-4 w-full space-y-3">
               <!-- Videos Goal -->
               <div>
                 <div class="flex items-center justify-between text-xs text-white/80 mb-1">
                   <span>🎯 Videos</span>
-                  <span id="goal-videos-text">0/2</span>
+                  <div class="flex items-center gap-1">
+                    <span id="goal-videos-text">0/2</span>
+                    <div class="goal-adjust-controls flex items-center gap-0.5 ml-1">
+                      <button 
+                        id="goal-videos-decrease" 
+                        class="goal-adjust-btn goal-adjust-decrease"
+                        aria-label="Decrease video goal"
+                        title="Decrease goal">
+                        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"/>
+                        </svg>
+                      </button>
+                      <button 
+                        id="goal-videos-increase" 
+                        class="goal-adjust-btn goal-adjust-increase"
+                        aria-label="Increase video goal"
+                        title="Increase goal">
+                        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
                 </div>
                 <div class="w-full bg-white/20 rounded-full h-1.5 overflow-hidden backdrop-blur-sm">
                   <div id="goal-videos-bar" class="h-1.5 rounded-full bg-white transition-all duration-500 w-0"></div>
@@ -307,7 +329,29 @@
               <div>
                 <div class="flex items-center justify-between text-xs text-white/80 mb-1">
                   <span>⏱️ Minutes</span>
-                  <span id="goal-minutes-text">0/30</span>
+                  <div class="flex items-center gap-1">
+                    <span id="goal-minutes-text">0/30</span>
+                    <div class="goal-adjust-controls flex items-center gap-0.5 ml-1">
+                      <button 
+                        id="goal-minutes-decrease" 
+                        class="goal-adjust-btn goal-adjust-decrease"
+                        aria-label="Decrease minutes goal"
+                        title="Decrease goal">
+                        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"/>
+                        </svg>
+                      </button>
+                      <button 
+                        id="goal-minutes-increase" 
+                        class="goal-adjust-btn goal-adjust-increase"
+                        aria-label="Increase minutes goal"
+                        title="Increase goal">
+                        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
                 </div>
                 <div class="w-full bg-white/20 rounded-full h-1.5 overflow-hidden backdrop-blur-sm">
                   <div id="goal-minutes-bar" class="h-1.5 rounded-full bg-white transition-all duration-500 w-0"></div>
