--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
 <body
   class="bg-gradient-to-br from-sky-50 via-white to-slate-50 min-h-screen font-sans text-slate-800 dark:from-slate-900 dark:via-slate-800 dark:to-slate-900 dark:text-slate-300">
-  
+
   <!-- Skip to main content link for keyboard navigation -->
   <a href="#main-content" class="skip-to-main">
     Skip to main content
   </a>
-  
+
   <!-- Header -->
   <header
     class="sticky top-0 z-30 bg-white/80 backdrop-blur-lg border-b border-slate-200 dark:bg-slate-900/90 dark:border-slate-700 shadow-sm">
@@ -54,9 +54,7 @@
 
           <!-- Mobile: Course Selector -->
           <div class="relative group min-w-0 flex-1 block max-[479px]:block min-[480px]:hidden">
-            <button id="course-selector-btn-mobile"
-              aria-label="Select course"
-              aria-haspopup="true"
+            <button id="course-selector-btn-mobile" aria-label="Select course" aria-haspopup="true"
               aria-expanded="false"
               class="flex items-center gap-1.5 text-sm font-bold tracking-tight dark:text-sky-400 hover:opacity-80 transition-opacity truncate max-w-full">
               <span id="current-course-title-mobile" class="text-left truncate">Course Tracker</span>
@@ -66,9 +64,7 @@
             </button>
 
             <!-- Mobile Dropdown Menu -->
-            <div id="course-dropdown-mobile"
-              role="menu"
-              aria-label="Course selection menu"
+            <div id="course-dropdown-mobile" role="menu" aria-label="Course selection menu"
               class="fixed left-4 right-4 mt-2 bg-white dark:bg-slate-800 rounded-xl shadow-xl border border-slate-100 dark:border-slate-700 hidden z-50 overflow-hidden transform transition-all"
               style="top: 60px;">
               <div class="p-2 border-b border-slate-100 dark:border-slate-700">
@@ -79,8 +75,7 @@
                 <!-- Courses injected here -->
               </div>
               <div class="p-2 border-t border-slate-100 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50">
-                <button id="btn-add-new-course-mobile"
-                  aria-label="Add new course"
+                <button id="btn-add-new-course-mobile" aria-label="Add new course"
                   class="w-full flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-sky-600 dark:text-sky-400 hover:bg-sky-50 dark:hover:bg-slate-700 rounded-lg transition-colors">
                   <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
@@ -93,10 +88,7 @@
 
           <!-- Desktop: Course Selector -->
           <div class="relative group max-[479px]:hidden min-[480px]:block">
-            <button id="course-selector-btn"
-              aria-label="Select course"
-              aria-haspopup="true"
-              aria-expanded="false"
+            <button id="course-selector-btn" aria-label="Select course" aria-haspopup="true" aria-expanded="false"
               class="flex items-center gap-2 text-lg md:text-xl font-bold tracking-tight dark:text-sky-400 hover:opacity-80 transition-opacity">
               <span id="current-course-title" class="text-left">Course Time Tracker</span>
               <svg class="w-5 h-5 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -105,9 +97,7 @@
             </button>
 
             <!-- Dropdown Menu -->
-            <div id="course-dropdown"
-              role="menu"
-              aria-label="Course selection menu"
+            <div id="course-dropdown" role="menu" aria-label="Course selection menu"
               class="absolute top-full left-0 mt-2 w-64 bg-white dark:bg-slate-800 rounded-xl shadow-xl border border-slate-100 dark:border-slate-700 hidden z-50 overflow-hidden transform origin-top-left transition-all">
               <div class="p-2 border-b border-slate-100 dark:border-slate-700">
                 <p class="text-xs font-semibold text-slate-500 dark:text-slate-400 px-2 py-1 uppercase tracking-wider">
@@ -117,8 +107,7 @@
                 <!-- Courses injected here -->
               </div>
               <div class="p-2 border-t border-slate-100 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50">
-                <button id="btn-add-new-course"
-                  aria-label="Add new course"
+                <button id="btn-add-new-course" aria-label="Add new course"
                   class="w-full flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-sky-600 dark:text-sky-400 hover:bg-sky-50 dark:hover:bg-slate-700 rounded-lg transition-colors">
                   <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
@@ -161,37 +150,34 @@
       </div>
     </div>
   </header>
-  
+
   <!-- Bulk Actions Bar (Hidden by default) -->
-  <div id="bulk-actions-bar" class="hidden sticky top-16 z-20 bg-sky-50 dark:bg-slate-800 border-b border-sky-200 dark:border-slate-700 shadow-md">
+  <div id="bulk-actions-bar"
+    class="hidden sticky top-16 z-20 bg-sky-50 dark:bg-slate-800 border-b border-sky-200 dark:border-slate-700 shadow-md">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3">
       <div class="flex items-center justify-between flex-wrap gap-3">
         <div class="flex items-center gap-3">
           <span id="bulk-selected-count" class="text-sm font-semibold text-sky-700 dark:text-sky-300">
             0 selected
           </span>
-          <button
-            id="bulk-select-all"
+          <button id="bulk-select-all"
             class="text-xs px-3 py-1 bg-white dark:bg-slate-700 hover:bg-slate-50 dark:hover:bg-slate-600 text-slate-700 dark:text-slate-200 rounded border border-slate-300 dark:border-slate-600 transition"
             aria-label="Select all videos">
             Select All
           </button>
-          <button
-            id="bulk-deselect-all"
+          <button id="bulk-deselect-all"
             class="text-xs px-3 py-1 bg-white dark:bg-slate-700 hover:bg-slate-50 dark:hover:bg-slate-600 text-slate-700 dark:text-slate-200 rounded border border-slate-300 dark:border-slate-600 transition"
             aria-label="Deselect all videos">
             Deselect All
           </button>
         </div>
         <div class="flex items-center gap-2">
-          <button
-            id="bulk-mark-watched"
+          <button id="bulk-mark-watched"
             class="text-xs px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded shadow transition disabled:opacity-50 disabled:cursor-not-allowed"
             aria-label="Mark selected videos as watched">
             ✓ Mark Watched
           </button>
-          <button
-            id="bulk-delete"
+          <button id="bulk-delete"
             class="text-xs px-4 py-2 bg-red-600 hover:bg-red-700 text-white rounded shadow transition disabled:opacity-50 disabled:cursor-not-allowed"
             aria-label="Delete selected videos">
             🗑️ Delete
@@ -200,9 +186,10 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Main -->
-  <main id="main-content" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8 space-y-6 sm:space-y-8" role="main">
+  <main id="main-content" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8 space-y-6 sm:space-y-8"
+    role="main">
     <!-- Skeleton Loading (hidden by default, shown on initial load) -->
     <div id="skeleton-loader" class="hidden">
       <!-- Dashboard Skeletons -->
@@ -299,22 +286,16 @@
                   <div class="flex items-center gap-1">
                     <span id="goal-videos-text">0/2</span>
                     <div class="goal-adjust-controls flex items-center gap-0.5 ml-1">
-                      <button 
-                        id="goal-videos-decrease" 
-                        class="goal-adjust-btn goal-adjust-decrease"
-                        aria-label="Decrease video goal"
-                        title="Decrease goal">
+                      <button id="goal-videos-decrease" class="goal-adjust-btn goal-adjust-decrease"
+                        aria-label="Decrease video goal" title="Decrease goal">
                         <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"/>
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" />
                         </svg>
                       </button>
-                      <button 
-                        id="goal-videos-increase" 
-                        class="goal-adjust-btn goal-adjust-increase"
-                        aria-label="Increase video goal"
-                        title="Increase goal">
+                      <button id="goal-videos-increase" class="goal-adjust-btn goal-adjust-increase"
+                        aria-label="Increase video goal" title="Increase goal">
                         <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                         </svg>
                       </button>
                     </div>
@@ -332,22 +313,16 @@
                   <div class="flex items-center gap-1">
                     <span id="goal-minutes-text">0/30</span>
                     <div class="goal-adjust-controls flex items-center gap-0.5 ml-1">
-                      <button 
-                        id="goal-minutes-decrease" 
-                        class="goal-adjust-btn goal-adjust-decrease"
-                        aria-label="Decrease minutes goal"
-                        title="Decrease goal">
+                      <button id="goal-minutes-decrease" class="goal-adjust-btn goal-adjust-decrease"
+                        aria-label="Decrease minutes goal" title="Decrease goal">
                         <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"/>
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" />
                         </svg>
                       </button>
-                      <button 
-                        id="goal-minutes-increase" 
-                        class="goal-adjust-btn goal-adjust-increase"
-                        aria-label="Increase minutes goal"
-                        title="Increase goal">
+                      <button id="goal-minutes-increase" class="goal-adjust-btn goal-adjust-increase"
+                        aria-label="Increase minutes goal" title="Increase goal">
                         <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                         </svg>
                       </button>
                     </div>
@@ -555,7 +530,43 @@
 
           <!-- Content -->
           <div class="widget-content w-full px-5 pb-5 relative z-10 transition-all duration-300 origin-top">
-            <ul id="history-list" class="mt-2 space-y-2 text-sm w-full">
+            <!-- Trend Analysis Section -->
+            <div id="trend-analysis" class="mb-4 space-y-2">
+              <!-- Trend Indicator -->
+              <div class="flex items-center justify-between text-xs">
+                <span class="text-white/80">Weekly Trend</span>
+                <div id="trend-indicator" class="flex items-center gap-1 font-semibold">
+                  <span id="trend-icon">📊</span>
+                  <span id="trend-text">Calculating...</span>
+                </div>
+              </div>
+
+              <!-- Best & Worst Days -->
+              <div class="grid grid-cols-2 gap-2 text-xs">
+                <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2">
+                  <div class="text-white/70 mb-1">🔥 Best Day</div>
+                  <div id="best-day" class="font-semibold text-white">--</div>
+                </div>
+                <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2">
+                  <div class="text-white/70 mb-1">💤 Slowest</div>
+                  <div id="slowest-day" class="font-semibold text-white">--</div>
+                </div>
+              </div>
+
+              <!-- Weekly Average -->
+              <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2 text-xs">
+                <div class="flex items-center justify-between">
+                  <span class="text-white/80">📈 Weekly Average</span>
+                  <span id="weekly-average" class="font-semibold text-white">--</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Divider -->
+            <div class="border-t border-white/20 mb-3"></div>
+
+            <!-- History List -->
+            <ul id="history-list" class="space-y-2 text-sm w-full">
               <li class="text-white/70">No recorded activity yet.</li>
             </ul>
           </div>
