feat: Add detailed time breakdown display for today's activity with custom scrollbar and update service worker cache.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     Hide
                   </button>
                 </div>
-                <div id="time-breakdown-list" class="space-y-1.5 text-xs">
+                <div id="time-breakdown-list" class="space-y-1.5 text-xs max-h-48 overflow-y-auto pr-1">
                   <!-- Breakdown will be inserted here -->
                 </div>
               </div>
