feat: Add course completion estimate module and integrate its display into the dashboard UI.

--- a/index.html
+++ b/index.html
@@ -422,6 +422,22 @@
               </div>
             </div>
 
+            <!-- Estimated Completion Section -->
+            <div id="completion-estimate-section" class="mt-4 w-full">
+              <div class="bg-white/10 backdrop-blur-sm rounded-lg p-3 space-y-2">
+                <div class="flex items-center justify-between">
+                  <span class="text-xs text-white/80 font-semibold">📅 Estimated Completion</span>
+                  <span id="completion-icon" class="text-lg">🎯</span>
+                </div>
+                <div id="completion-date" class="text-white font-bold text-sm">
+                  Calculating...
+                </div>
+                <div id="completion-insight" class="text-white/70 text-xs">
+                  Keep up the great work!
+                </div>
+              </div>
+            </div>
+
             <div class="mt-auto w-full">
               <p class="text-xs text-white/70 mt-4">
                 Balanced progress keeps motivation high — aim for steady daily
