feat: add trend analysis functionality with UI and remove state synchronization documentation.

--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
             <div id="trend-analysis" class="mb-4 space-y-2">
               <!-- Trend Indicator -->
               <div class="flex items-center justify-between text-xs">
-                <span class="text-white/80">Weekly Trend</span>
-                <div id="trend-indicator" class="flex items-center gap-1 font-semibold">
+                <span class="text-white font-semibold">Weekly Trend</span>
+                <div id="trend-indicator" class="flex items-center gap-1 font-semibold text-white">
                   <span id="trend-icon">📊</span>
                   <span id="trend-text">Calculating...</span>
                 </div>
@@ -595,11 +595,11 @@
               <!-- Best & Worst Days -->
               <div class="grid grid-cols-2 gap-2 text-xs">
                 <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2">
-                  <div class="text-white/70 mb-1">🔥 Best Day</div>
+                  <div class="text-white/90 mb-1">🔥 Best Day</div>
                   <div id="best-day" class="font-semibold text-white">--</div>
                 </div>
                 <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2">
-                  <div class="text-white/70 mb-1">💤 Slowest</div>
+                  <div class="text-white/90 mb-1">💤 Slowest</div>
                   <div id="slowest-day" class="font-semibold text-white">--</div>
                 </div>
               </div>
@@ -607,7 +607,7 @@
               <!-- Weekly Average -->
               <div class="bg-white/10 backdrop-blur-sm rounded-lg p-2 text-xs">
                 <div class="flex items-center justify-between">
-                  <span class="text-white/80">📈 Weekly Average</span>
+                  <span class="text-white font-semibold">📈 Weekly Average</span>
                   <span id="weekly-average" class="font-semibold text-white">--</span>
                 </div>
               </div>
